Actualización de index y styles.css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content-banner">
             <p>Perfumes Árabes</p>
             <h2>La Mejor Calidad</h2>
-            <a href="#productos">Comprar Ahora</a>
+            <a href="#productos">Ver Productos</a>
         </div>
     </section>
     <section class="categories">
@@ -106,10 +106,8 @@
         <img src="imgs/gallery1.png" alt="Gallery Img1" class="gallery-img-1">
     </section>
 
-    <section class="container masculinas" id="fmasculinas">
+    <section class="container-items" id="fmasculinas">
         <h1 class="heading-1">Masculinas</h1>
-
-        <div class="container-items" id="productos">
             <div class="item">
                 <figure>
                     <img src="imgs/mandarin sky.png" alt="producto">
@@ -118,7 +116,7 @@
                     <h2 class="product-title">Mandarin Sky</h2>
                     <p class="price">$75.000</p>
                 </div>
-            </div>
+            </div> 
            
     </section>
 
@@ -127,8 +125,17 @@
 
     </section>
 
-    <section class="container femeninas" id="ffemeninas">
+    <section class="container-items" id="ffemeninas">
         <h1 class="heading-1">Femeninas</h1>
+        <div class="item">
+            <figure>
+                <img src="imgs/lattafa-yara-moi-2-PhotoRoom.png" alt="producto">
+            </figure>
+            <div class="info-product">
+                <h2 class="product-title">Yara Moi</h2>
+                <p class="price">$60.000</p>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
@@ -142,7 +149,7 @@
                         <li> Teléfono: 2473-457449</li>
                     </ul>
                     <div class="social-icons">
-                        <a href=""><span class="instagram"> <i class="fa-brands fa-instagram"></i></span></a>
+                        <a href="https://www.instagram.com/fraganciasking_/"><span class="instagram"> <i class="fa-brands fa-instagram"></i></span></a>
                         <a href="https://wa.me/+542473457449"><span class="whatsapp"> <i class="fa-brands fa-whatsapp"></i></span></a> 
                     </div>
                 </div>
