--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         </div>
         <div class="item">
             <figure>
-                <img src="imgs/lattafak.png" alt="producto">
+                <img src="imgs/khamrahqahwa-9ee64a19161e4d257917355066766228-1024-1024.jpg" alt="producto">
             </figure>
             <div class="info-product">
-                <h2 class="product-title">Khamrah</h2>
-                <p class="price">$80.000</p>
+                <h2 class="product-title">Khamrah Qawha</h2>
+                <p class="price">$70.000</p>
             </div>
         </div>
         <div class="item">
@@ -106,8 +106,11 @@
         <img src="imgs/gallery1.png" alt="Gallery Img1" class="gallery-img-1">
     </section>
 
-    <section class="container-items" id="fmasculinas">
+    <section class="container masculinas" id="funisex">
         <h1 class="heading-1">Masculinas</h1>
+    </section>
+
+    <section class="container-items" id="fmasculinas">
             <div class="item">
                 <figure>
                     <img src="imgs/mandarin sky.png" alt="producto">
@@ -115,8 +118,19 @@
                 <div class="info-product">
                     <h2 class="product-title">Mandarin Sky</h2>
                     <p class="price">$75.000</p>
+                </div> 
                 </div>
-            </div> 
+                <div class="item">
+                <figure>
+                    <img src="imgs/fakhar-800 (1).png" alt="producto">
+                </figure>
+                <div class="info-product">
+                    <h2 class="product-title">Fakhar Pride</h2>
+                    <p class="price">$65.000</p>
+                </div>
+                
+            </div>
+        </div> 
            
     </section>
 
@@ -125,8 +139,11 @@
 
     </section>
 
-    <section class="container-items" id="ffemeninas">
+    <section class="container femeninas" id="funisex">
         <h1 class="heading-1">Femeninas</h1>
+    </section>
+
+    <section class="container-items" id="ffemeninas">
         <div class="item">
             <figure>
                 <img src="imgs/lattafa-yara-moi-2-PhotoRoom.png" alt="producto">
