Agrego JS y página para descripción y notas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragancias King</title>
+    <link rel="icon" href="imgs/favicon-32x32.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -71,34 +72,52 @@
         <h1 class="heading-1">Unisex</h1>
     </section>
 
+
+
     <div class="container-items" id="productos">
         <div class="item">
             <figure>
-                <img src="imgs/perfume-9pm.png" alt="producto">
+                <a href="product.html?id=9pm">
+                <img src="imgs/perfume-9pm.png" alt="9PM">
             </figure>
             <div class="info-product">
                 <h2 class="product-title">9PM</h2>
                 <p class="price">$65.000</p>
+            </a>
             </div>
         </div>
         <div class="item">
             <figure>
-                <img src="imgs/khamrahqahwa-9ee64a19161e4d257917355066766228-1024-1024.jpg" alt="producto">
+                <a href="product.html?id=khamrahqahwa">
+                <img src="imgs/khamrahqahwaposta.png" alt="Khamrah Qahwa">
             </figure>
             <div class="info-product">
                 <h2 class="product-title">Khamrah Qawha</h2>
-                <p class="price">$70.000</p>
+                <p class="price">$60.000</p>
+            </a>
             </div>
         </div>
         <div class="item">
             <figure>
-                <img src="imgs/honorglory.png" alt="producto">
+                <a href="product.html?id=honor">
+                <img src="imgs/honorglory (1).png" alt="Honor & Glory">
             </figure>
             <div class="info-product">
                 <h2 class="product-title">Honor & Glory</h2>
-                <p class="price">$75.000</p>
+                <p class="price">$65.000</p>
+            </a>
             </div>
+            
         </div>
+        <!--<div class="item">
+            <figure>
+                <img src="imgs/lattafak.png" alt="producto">
+            </figure>
+            <div class="info-product">
+                <h2 class="product-title">Khamrah</h2>
+                <p class="price">$70.000</p>
+            </div>
+        </div> -->
     </div>
 
     <section class="gallery">
@@ -111,21 +130,23 @@
 
     <section class="container-items" id="fmasculinas">
             <div class="item">
-                <figure>
+                <!--<figure>
                     <img src="imgs/mandarin sky.png" alt="producto">
                 </figure>
                 <div class="info-product">
                     <h2 class="product-title">Mandarin Sky</h2>
                     <p class="price">$75.000</p>
-                </div> 
+                </div> -->
                 </div>
                 <div class="item">
                 <figure>
-                    <img src="imgs/fakhar-800 (1).png" alt="producto">
+                    <a href="product.html?id=fakhar">
+                    <img src="imgs/fakhar-800 (1).png" alt="Fakhar Pride">
                 </figure>
                 <div class="info-product">
                     <h2 class="product-title">Fakhar Pride</h2>
-                    <p class="price">$65.000</p>
+                    <p class="price">$60.000</p>
+                </a>
                 </div>
                 
             </div>
@@ -145,11 +166,13 @@
     <section class="container-items" id="ffemeninas">
         <div class="item">
             <figure>
-                <img src="imgs/lattafa-yara-moi-2-PhotoRoom.png" alt="producto">
+                <a href="product.html?id=yara">
+                <img src="imgs/lattafa-yara-moi-2-PhotoRoom.png" alt="Yara Moi">
             </figure>
             <div class="info-product">
                 <h2 class="product-title">Yara Moi</h2>
                 <p class="price">$60.000</p>
+            </a>
             </div>
         </div>
     </section>
