Agrego sin stock al index

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <div class="info-product">
                 <h2 class="product-title">9PM</h2>
                 <p class="price">$65.000</p>
+                <p class="stockgod">Sin Stock</p>
             </a>
             </div>
         </div>
@@ -92,8 +93,9 @@
                 <img src="imgs/khamrahqahwaposta.png" alt="Khamrah Qahwa">
             </figure>
             <div class="info-product">
-                <h2 class="product-title">Khamrah Qawha</h2>
+                <h2 class="product-title">Khamrah Qahwa</h2>
                 <p class="price">$65.000</p>
+                <p class="stockgod">Sin Stock</p>
             </a>
             </div>
         </div>
