Saco de stock algunos perfumes

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <div class="info-product">
                 <h2 class="product-title">Khamrah Qahwa</h2>
                 <p class="price">$70.000</p>
-                <span class="discount">$56.000</span>
-                <span class="discount-badge">-20%</span>
-               <!-- <p class="stockgod">Sin Stock</p> -->
+                <!-- <span class="discount">$56.000</span>
+                <span class="discount-badge">-20%</span>-->
+                <p class="stockgod">Sin Stock</p> 
             </a>
             </div>
         </div>
@@ -111,9 +111,9 @@
                 <div class="info-product">
                     <h2 class="product-title">Asad Bourbon</h2>
                     <p class="price">$80.000</p>
-                    <span class="discount">$64.000</span>
-                    <span class="discount-badge">-20%</span>
-                   <!-- <p class="stockgod">Sin Stock</p> -->
+                    <!-- <span class="discount">$64.000</span>
+                    <span class="discount-badge">-20%</span> -->
+                   <p class="stockgod">Sin Stock</p>
                 </a>
 
         </div>
@@ -189,8 +189,10 @@
                 <div class="info-product">
                     <h2 class="product-title">The Kingdom</h2>
                     <p class="price">$80.000</p>
-                    <span class="discount">$64.000</span>
-                    <span class="discount-badge">-20%</span>
+                    <!-- <span class="discount">$64.000</span>
+                    <span class="discount-badge">-20%</span> -->
+                    <p class="stockgod">Sin Stock</p>
+
                 </a>
                 </div>
                 </div>
