Agrego seccion decants

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="menu">
                     <li><a href="#Home">Inicio</a></li>
                     <li><a href="#productos">Perfumes Árabes</a></li>
-                    <li><a href="#footer">Más</a></li>
+                    <li><a href="#decantsgod">Decants</a></li>
                 </ul>
 
                 <form class="search-form">
@@ -224,6 +224,48 @@
             </div>
         </div>
     </section>
+
+    <section class="decants-section" id="decantsgod">
+  <h2 class="section-title">Decants Disponibles</h2>
+  <div class="decants-grid">
+    <!-- Decant 1 -->
+    <div class="decant-card">
+      <img src="imgs/thekingdom500.png" alt="Decant The Kingdom" />
+      <h3>The Kingdom - Lattafa</h3>
+      <p class="decant-size">5ml - $8.000</p>
+      <div class="buy-button">
+    <a href="https://wa.me/+542473457449" class="wpp2">
+      <span class="whatsapp"><i class="fa-brands fa-whatsapp"></i></span> Comprar
+    </a>
+  </div> 
+    </div>
+
+    <!-- Decant 2 -->
+    <div class="decant-card">
+      <img src="imgs/khamrahqahwaposta.png" alt="Decant Khamrah Qahwa" />
+      <h3>Khamrah Qahwa - Lattafa</h3>
+      <p class="decant-size">5ml - $8.000</p>
+      <div class="buy-button">
+    <a href="https://wa.me/+542473457449" class="wpp2">
+      <span class="whatsapp"><i class="fa-brands fa-whatsapp"></i></span> Comprar
+    </a>
+  </div> 
+    </div>
+
+    <!-- Decant 3 -->
+    <div class="decant-card">
+      <img src="imgs/honorglory (1).png" alt="Decant Honor & Glory" />
+      <h3>Honor & Glory - Lattafa</h3>
+      <p class="decant-size">5ml - $8.000</p>
+      <div class="buy-button">
+    <a href="https://wa.me/+542473457449" class="wpp2">
+      <span class="whatsapp"><i class="fa-brands fa-whatsapp"></i></span> Comprar
+    </a>
+  </div> 
+    </div>
+  </div>
+</section>
+
 
     <footer class="footer">
         <div class="container container-footer" id="footer">
